# tbweightcalc

./: .gitignore  Dockerfile  ExerciseSet.py  Makefile  README.md  cli.py  exercise_cluster.py  exercise_cluster_testcase.py  exercise_set.py  exercise_set_testcase.py  install_tbcalc.sh  main.py  pyproject.toml  weights.py
tbweightcalc/: __init__.py  cli.py  config.py  default_config.yaml  exercise_cluster.py  exercise_set.py  formatting.py  onerm.py  program.py
templates/: overview.j2.html
tests/: exercise_cluster_testcase.py  test_cli.py  test_config.py  test_exercise_cluster.py  test_exercise_set.py  test_onerm.py  test_program.py  test_warmup_progression.py
