[tool.poetry]
name = "tbweightcalc"
version = "0.2.0"
description = "Tactical Barbell program calculator"
authors = ["Zach Banks"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
weasyprint = "^57.2"
Jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


