[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tbweightcalc"
version = "1.0.0"
description = "Tactical Barbell Max Strength calculator and PDF generator"
authors = [
    { name = "Zach Banks" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2",
    "weasyprint",
]

[project.scripts]
tbcalc = "tbweightcalc.cli:main"

[tool.setuptools]
packages = ["tbweightcalc"]
