[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tbweightcalc"
version = "1.1.0"
description = "Tactical Barbell Max Strength calculator and PDF generator"
authors = [
    { name = "Zach Banks" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
tbcalc = "tbweightcalc.cli:main"

[tool.setuptools]
packages = ["tbweightcalc"]

[tool.setuptools.package-data]
tbweightcalc = ["default_config.yaml"]
